symfony/web/themes/default/css/main.css
/* ... */
.menu > ul > li.current > a {
	background:#f28c38;
	color:#fff;
}
.menu > ul > li.current > a b {
	background:#f28c38;
}
.menu > ul > li.current > ul {
	left:0;
	opacity:1;
}
.menu > ul:hover > li.current > a {
	background:#f28c38;
}
.menu > ul:hover > li.current > a b {
	background:#f28c38;
}
.menu > ul:hover > li.current > ul {
	left:-9999px;
}
.menu > ul:hover > li.current:hover > a {
	background:#f28c38;
}
.menu > ul:hover > li.current:hover > a b {
	background:#f28c38;
}
.menu > ul:hover > li.current:hover > ul {
	left:0;
	opacity:1;
}
.menu > ul > li > ul > li.selected > a {
	background:#555657;
	color:#fff;
}
.menu > ul > li > ul > li.selected > a.arrow {
	background:#555657 url(../images/sub-nav-arrow-s.png) no-repeat 92% 48%;
}
.menu > ul > li > ul > li.current > a b {
	background:#555657;
}
.menu > ul > li > ul > li.current > ul {
	left:0;
	opacity:1;
}
/* ================ Main menu styles: End ================ */

/* ================ Main div styles: Begin ================ */
#wrapper {
	min-width:940px;
	overflow:hidden;
}
#content {
	padding-top:35px;
}
#footer {
	text-align:center;
	padding:0 0 30px 0;
	color:#777;
	font-size:12px;
}
.box {
	margin:20px;
	position:relative;
}
.box a {
    text-decoration: underline;
    cursor: pointer;
}
.box div.top {
	width:100%;
	margin-bottom:10px;
	border-bottom:1px solid #dedede;
	padding-bottom:13px;
	overflow:hidden;
}
.box .inner {
	background:#f7f6f6;
	padding:15px;
	border:1px solid #dedede;
	border-top:none;
	-moz-border-radius-bottomright: 3px;
	-webkit-border-bottom-right-radius: 3px;
	border-bottom-right-radius: 3px;
	-moz-border-radius-bottomleft: 3px;
	-webkit-border-bottom-left-radius: 3px;
	border-bottom-left-radius: 3px;
	overflow:hidden;
	margin-bottom:19px;
}
.box .head {
	position:relative;
}
.box .head h1 {
	background: #f3f3f3 url(../images/h1-bg.png) left bottom repeat-x;
	font-size:18px;
	color:#5d5d5d;
	padding:9px 15px;
	line-height:20px;
	border:1px solid #dedede;
	-moz-border-radius-topleft: 3px;
	-webkit-border-top-left-radius: 3px;
	 border-top-left-radius: 3px;
	-moz-border-radius-topright: 3px;
	-webkit-border-top-right-radius: 3px;
	border-top-right-radius: 3px;
}
.box h2 {
    font-weight: bold;
    font-size: 15px;
}
.box h3 {
    font-weight: bold;
    font-size: 13px;
}
.noHeader .inner {
	border:1px solid #dedede;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
}
.box .toggle {
	background: url(../images/toggle-down.png) no-repeat 99% 50%;
	width:9px;
	height:8px;
	text-indent:-9999px;
	display:block;
	position:absolute;
	top:0;
	left:0;
	width:100%;
	height:40px;
}
.box .toggle.activated	{
	background: url(../images/toggle-up.png) no-repeat 99% 50%;
}
.box ul.top {
	position:absolute;
	top:25px;
	right:20px;
}
.box ul.bottom {
	float:right;
	padding:15px 0 0 ;
}
.miniList p {
    margin-bottom: 10px;
    padding-top: 0;
}
/* ================ Main div styles: End ================ */

/* ================ General class styles: Begin ================ */
.normal {
    margin: 0;
    border: none;
}
.hide {display:none;}

.show {
  display: block;
}
.fade {
  opacity: 0;
  -webkit-transition: opacity 0.15s linear;
     -moz-transition: opacity 0.15s linear;
      -ms-transition: opacity 0.15s linear;
       -o-transition: opacity 0.15s linear;
          transition: opacity 0.15s linear;
}
.inputFormatHint {
    color: #A9A9A9;
}
.fieldHelpBottom {
	position:absolute;
	top:27px;
	left:150px;   
    margin-bottom: 10px;
    color: #A9A9A9;
}
.fieldHelpRight {
    margin-left: 5px;
}
.boldText {
    font-weight: bold;
}
.required {
	color:#aa4935;
}
/* ================ General class styles: End ================ */

/* ================ Form styles: Begin ================ */
form ol {
	border-bottom:1px solid #dedede;
	overflow:hidden;
    padding-bottom: 5px;  /* ruchira: fix overlap between validation error in last input field */    
    margin-bottom: 10px;
}
form ol li {
	float:left;
	position:relative;
    width:90%;
    margin:3px 0 12px 0;
}
form ol li label {
	display:block;
	color:#5d5d5d;
	width:150px;
	float:left;
}
 /* TODO: Check whether .label is in use */
/* 
form ol li .label {
	display:block;
	color:#5d5d5d;
	width:150px;
	float:left;
}
form ol li .label {
	height:50px;
	margin:0;
}
*/
form ol li input {
	float:left;
	width:225px;
}
form input, form select,  form textarea {
	font-size:13px;
	border:1px solid #d2d1d1;
	color:#5d5d5d;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	outline:none;
	padding:4px 6px;
    background-color: #FFF;
}
form ol li select {
    float:left;
    width:239px;
	height:25px;
	margin-top:1px;
    padding:3px 6px;
}
form ol li textarea {
	float:left;
	width:250px;
	height:80px;
}
form ol li input[type=text] {
    height:16px;

}
form ol li input[type="file"] {
    margin-bottom: 12px;
}
form ol li input.calendar {
	width:165px;
	float:left;
}
form ol li input:disabled, form ol li select:disabled,  form ol li textarea:disabled {
    background-color: #DDD;
}
form ol li.line {
	width:100%;
}
form ol li.new {
	clear:left;
}
form ol li.noLabel { /*TODO: Check whether this is the proper way. Used in 'saveJobTitle' */
	margin-left: 150px;
}
form ol li.noLabel .fieldHelpBottom {
	left: 0;
}
form ol li.required {
	float:left;
	width:425px;
	margin-top:9px;
	color:#a9a9a9;
	font-size:11px;
}
form ol li.required em {
	color:#aa4935;
}
form ol li label em {
	color:#aa4935;
}
form ol li.helpText { /* Used in Recruitment > Add Job Vacancy */
	float:left;
	margin-top:9px;
	color:#a9a9a9;
	font-size:12px;
}
/* ------------- longLabels styles ------------- */
form.longLabels ol li label { /* Used in pim/viewMemberships, admin/listMailConfiguration*/
    width: 180px;
}
form.longLabels ol li span.validation-error {
	left:180px;
}
/* ------------- Checkbox styles ------------- */
form ol li.checkbox input { /* Used in Admin > Localization */
	width:auto;
	border:none;
}
/* ... */

